Render ExportImage using React Portal to avoid layout clipping; refactor code

--- a/plugins/rangepicker.css
+++ b/plugins/rangepicker.css
@@ -59,6 +59,20 @@
     margin-bottom: 5px; /* Spazio a destra del testo in grassetto */
 }
 
+#exportimage-portal-root {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none; /* Importante per evitare che il portal blocchi gli eventi del mouse */
+    z-index: 1000; /* Assicurati che il portal sia sopra gli altri elementi */
+  }
+
+#exportimage-portal-root > div {
+    pointer-events: auto; /* Consente agli elementi all'interno del portal di ricevere eventi del mouse */
+}
+
 @media (min-width: 769px) {
     div#mapstore-freerangepicker-map,
     div#mapstore-fixedrangepicker-map {
